# opam-cross-lambda

./: README.md
.github/workflows/: base-compiler.yml
cross-template-packages/seq/seq.base/: opam
packman/: dune-project
packman/_build/: .db  .digest-db  log
packman/_build/default/.dune/: configurator  configurator.v2
packman/notes/: opamSolver.md  variable_interpolation.md
validations/test-eio/: dune  eio_fiber_test.ml
validations/test-fmt/: dune  dune-project  test_fmt.ml
validations/test-piaf/: dune  dune-project  test_piaf.ml
