(lang dune 3.16)
(package 
  (name test-fmt)
  
 (allow_empty)
 (synopsis "test fmt library cross")
 (description
  "validate cross-compiler for fmt library")
 (authors "Chris Armstrong")
 (maintainers "Chris Armstrong <oss@chrisarmstrong.dev>")
 (homepage https://github.com/chris-armstrong/opam-cross-lambda)
 (bug_reports https://github.com/chris-armstrong/opam-cross-lambda/issues)
 (source
  (github chris-armstrong/opam-cross-lambda))
 (license AFGPL)
 (depends
  (dune
   (>= "3.4"))
  (ocaml
   (>= "4.14"))
  (fmt
   (>= "0.9.0"))
  fmt-cross-x86_64-al2023
  ))
  
